deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "imdb"
  namespace: "default"
  labels:
    app: "imdb"
spec:
  strategy:
    type: Recreate
  replicas: 3
  selector:
    matchLabels:
      app: "imdb"
  template:
    metadata:
      labels:
        app: "imdb"
    spec:
      serviceAccountName: default
#      terminationGracePeriodSeconds: 5
      containers:
      - name: "imdb"
        image: "gcr.io/cn-g14-projecto/imdb"
        ports:
        - containerPort: 50052
#        readinessProbe:
#          periodSeconds: 5
#          exec:
#            command: ["/bin/grpc_health_probe", "-addr=:50052"]
#        livenessProbe:
#          periodSeconds: 5
#          exec:
#            command: ["/bin/grpc_health_probe", "-addr=:50052"]
---
apiVersion: v1
kind: Service
metadata:
  name: imdb
spec:
  type: ClusterIP
  selector:
    app: imdb
  ports:
  - name: grpc
    port: 50052
    targetPort: 50052
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "account"
  namespace: "default"
  labels:
    app: "account"
spec:
  strategy:
    type: Recreate
  replicas: 3
  selector:
    matchLabels:
      app: "account"
  template:
    metadata:
      labels:
        app: "account"
    spec:
      serviceAccountName: default
#      terminationGracePeriodSeconds: 5
      containers:
      - name: "account"
        image: "gcr.io/cn-g14-projecto/account"
        ports:
        - containerPort: 50055
#        readinessProbe:
#          periodSeconds: 5
#          exec:
#            command: ["/bin/grpc_health_probe", "-addr=:50055"]
#        livenessProbe:
#          periodSeconds: 5
#          exec:
#            command: ["/bin/grpc_health_probe", "-addr=:50055"]
---
apiVersion: v1
kind: Service
metadata:
  name: account
spec:
  type: ClusterIP
  selector:
    app: account
  ports:
  - name: grpc
    port: 50055
    targetPort: 50055
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "book"
  namespace: "default"
  labels:
    app: "book"
spec:
  strategy:
    type: Recreate
  replicas: 3
  selector:
    matchLabels:
      app: "book"
  template:
    metadata:
      labels:
        app: "book"
    spec:
      serviceAccountName: default
#      terminationGracePeriodSeconds: 5
      containers:
      - name: "book"
        image: "gcr.io/cn-g14-projecto/book"
        ports:
        - containerPort: 50051
#        readinessProbe:
#          periodSeconds: 5
#          exec:
#           command: ["/bin/grpc_health_probe", "-addr=:50051"]
#        livenessProbe:
#          periodSeconds: 5
#          exec:
#            command: ["/bin/grpc_health_probe", "-addr=:50051"]
---
apiVersion: v1
kind: Service
metadata:
  name: book
spec:
  type: ClusterIP
  selector:
    app: book
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "signin"
  namespace: "default"
  labels:
    app: "signin"
spec:
  strategy:
    type: Recreate
  replicas: 3
  selector:
    matchLabels:
      app: "signin"
  template:
    metadata:
      labels:
        app: "signin"
    spec:
      serviceAccountName: default
#      terminationGracePeriodSeconds: 5
      containers:
      - name: "signin"
        image: "gcr.io/cn-g14-projecto/signin"
        ports:
        - containerPort: 50054
#        readinessProbe:
#          periodSeconds: 5
#          exec:
#            command: ["/bin/grpc_health_probe", "-addr=:50054"]
#        livenessProbe:
#          periodSeconds: 5
#          exec:
#            command: ["/bin/grpc_health_probe", "-addr=:50054"]
---
apiVersion: v1
kind: Service
metadata:
  name: signin
spec:
  type: ClusterIP
  selector:
    app: signin
  ports:
  - name: grpc
    port: 50054
    targetPort: 50054
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "library"
  namespace: "default"
  labels:
    app: "library"
spec:
  strategy:
    type: Recreate
  replicas: 3
  selector:
    matchLabels:
      app: "library"
  template:
    metadata:
      labels:
        app: "library"
    spec:
      serviceAccountName: default
#      terminationGracePeriodSeconds: 5
      containers:
      - name: "library"
        image: "gcr.io/cn-g14-projecto/library"
        ports:
        - containerPort: 50050
#        readinessProbe:
#          periodSeconds: 5
#          exec:
#            command: ["/bin/grpc_health_probe", "-addr=:50050"]
#        livenessProbe:
#          periodSeconds: 5
#          exec:
#            command: ["/bin/grpc_health_probe", "-addr=:50050"]
---
apiVersion: v1
kind: Service
metadata:
  name: library
spec:
  type: ClusterIP
  selector:
    app: library
  ports:
  - name: grpc
    port: 50050
    targetPort: 50050
---
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: api-gateway
spec:
  strategy:
    type: Recreate
  replicas: 3
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      serviceAccountName: default
#      terminationGracePeriodSeconds: 5
      containers:
      - name: api-gateway
        image: "gcr.io/cn-g14-projecto/api-gateway"
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        readinessProbe:
          initialDelaySeconds: 10
          httpGet:
            path: "/lib/1"
            scheme: HTTPS
            port: 443
#            httpHeaders:
#            - name: "Cookie"
#              value: "shop_session-id=x-readiness-probe"
        livenessProbe:
          initialDelaySeconds: 10

          httpGet:
            path: "/lib/1"
            scheme: HTTPS
            port: 443
#            httpHeaders:
#            - name: "Cookie"
#              value: "shop_session-id=x-liveness-probe"
---
apiVersion: "v1"
kind: Service
metadata:
  name: api-gateway
  annotations:
    cloud.google.com/app-protocols: '{"https":"HTTPS"}'
spec:
#  type: ClusterIP
  type: NodePort
  selector:
    app: api-gateway
  ports:
  - name: https
    port: 443
    targetPort: 443
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: frontend-external
#spec:
#  type: LoadBalancer
#  selector:
#    app: api-gateway
#  ports:
#  - name: http
#    port: 80
#    targetPort: 5000
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - secretName: recommendations
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: api-gateway
          servicePort: 443


---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "anime"
  namespace: "default"
  labels:
    app: "anime"
spec:
  strategy:
    type: Recreate
  replicas: 3
  selector:
    matchLabels:
      app: "anime"
  template:
    metadata:
      labels:
        app: "anime"
    spec:
      serviceAccountName: default
#      terminationGracePeriodSeconds: 5
      containers:
      - name: "anime"
        image: "gcr.io/cn-g14-projecto/anime"
        ports:
        - containerPort: 50053
#        readinessProbe:
#          periodSeconds: 5
#          exec:
#            command: ["/bin/grpc_health_probe", "-addr=:50053"]
#        livenessProbe:
#          periodSeconds: 5
#          exec:
#            command: ["/bin/grpc_health_probe", "-addr=:50053"]
---
apiVersion: v1
kind: Service
metadata:
  name: anime
spec:
  type: ClusterIP
  selector:
    app: anime
  ports:
  - name: grpc
    port: 50053
    targetPort: 50053
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-recommendations
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: recommendations # must be the same as secret
    hosts:
    - recommendations.sytes.net
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendations
spec:
  hosts:
  - "recommendations.sytes.net"
  gateways:
  - ingress-gateway-recommendations
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 443
        host: api-gateway
---
